code-example-scenarios/10-scale-up-pods/save.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coffee-shop
  labels:
    app: coffee-shop
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coffee-shop
  template:
    metadata:
      labels:
        app: coffee-shop
    spec:
      containers:
      - name: coffee-shop
        image: coffee-shop
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 4
            memory: 3092M
          requests:
            cpu: 2
            memory: 1024M
---
apiVersion: v1
kind: Service
metadata:
  name: coffee-shop
  labels:
    app: coffee-shop
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: coffee-shop
